Fix overflow styling for release notes

--- a/style.css
+++ b/style.css
@@ -97,7 +97,8 @@ body {
     z-index: 20;
 }
 .modal-close {
-    float: right;
+    position: absolute;
+    right: 0;
     padding: 10px;
 }
 .modal-close button.text-button {
@@ -108,6 +109,8 @@ body {
 .release-notes {
     max-width: 80%;
     margin: 0 auto 0 auto;
+    overflow-y: auto;
+    max-height: 100%;
 }
 
 #branding {
